--- a/site_signal/src/components/TeamPage/TeamList/teamList.css
+++ b/site_signal/src/components/TeamPage/TeamList/teamList.css
@@ -135,6 +135,7 @@
 .memberList p {
     font-family: "Saira";
     font-weight: lighter;
+    font-size: 13px
 }
 
 .memberListInfoContainer {
@@ -147,8 +148,14 @@
     justify-content: space-between;
 }
 
+.memberListSocialMedia{
+    display: flex;
+    margin-right: 8px;
+}
+
+
 .memberListSocialMedia img {
-    margin: 0px 10px 12px 10px;
+    margin: 0px 5px 10px 5px;
 }
 
 /* Responsividade */
