--- a/site_signal/src/components/TeamPage/CoreValues/core-values.css
+++ b/site_signal/src/components/TeamPage/CoreValues/core-values.css
@@ -58,15 +58,35 @@
 
 /* Mobile & Tablets */
 
-@media screen and (min-width: 320px) and (max-width: 400px) {
+@media screen and (min-width: 320px) and (max-width: 380px) {
+
+    .valueCardsContainerMobile {
+        display: block;
+    }
+    
     .valueCardsSelection button {
-        height: 50px;
-        width: 50px;
+        margin: 0 8px;
+        height: 40px;
+        width: 40px;
+    }
+
+    .valueCardsSelection img {
+        height: 20px;
+        width: 20px;
+    }
+
+    .valueCardsContainer {
+        display: none;
+    }
+
+    .valueCardsSelection p {
+        font-size: 10px;
+        font-weight: lighter;
     }
 }
 
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
+@media screen and (min-width: 381px) and (max-width: 480px) {
 
     .coreValuesContainer {
         padding-bottom: 16px;
@@ -76,10 +96,11 @@
 
     .valueCardsSelection button {
         margin: 0 12px;
+        height: 50px;
+        width: 50px;
     }
 
     .valueCardsSelection p {
-        font-size: 12px;
         font-weight: lighter;
     }
 
