feat(TeamPage): página de equipe finalizada

--- a/site_signal/src/components/TeamPage/AboutMEJ/about-mej.css
+++ b/site_signal/src/components/TeamPage/AboutMEJ/about-mej.css
@@ -8,6 +8,14 @@
     align-items: center;
 }
 
+.aboutMEJContainer h1 {
+    padding-right: 0;
+}
+
+.aboutMEJContainer h2 {
+    padding-right: 0;
+}
+
 .aboutMEJContainer p{
     padding-left: 5%;
 }
