feat(Portfolio): ajustando arquitetura das pastas e criando pagina para os projetos

--- a/site_signal/src/components/HomePage/Solutions/solutions.css
+++ b/site_signal/src/components/HomePage/Solutions/solutions.css
@@ -9,7 +9,7 @@
 
 .solutionsContainer {
     display: flex;
-    background-image: url("../../assets/imgs/solucoesBackground.png");
+    background-image: url("../../../assets/imgs/solucoesBackground.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center; 
