style(Portfolio): arrumando responsividade e navbar

--- a/site_signal/src/assets/styles/global.css
+++ b/site_signal/src/assets/styles/global.css
@@ -108,6 +108,10 @@
     border-radius: 100% !important;
 }
 
+.carousel-control-next {
+    display: none!important;
+}
+
 /* Botoes */
 
 .buttonPurple {
