--- a/site_signal/src/components/HomePage/Navbar/navbar.css
+++ b/site_signal/src/components/HomePage/Navbar/navbar.css
@@ -144,6 +144,10 @@
     padding-top: 18px;
 }
 
+#menuOptionsLink:hover{
+    color: white;
+}
+
 .socialMedia {
     display: flex;
     justify-content: center;
