--- a/site_signal/src/assets/styles/global.css
+++ b/site_signal/src/assets/styles/global.css
@@ -110,11 +110,11 @@
 /* Botoes */
 
 .buttonPurple {
-    color: #8700A9;
     text-decoration: none;
+    background-color: white;
     border: 2px solid #8700A9;
     border-radius: 30px;
-    padding: 4px 40px 4px 40px;
+    padding: 8px 40px 4px 40px;
     z-index: 2;
     font-family: "Saira";
     font-size: 24px;
