--- a/site_signal/src/assets/styles/global.css
+++ b/site_signal/src/assets/styles/global.css
@@ -170,6 +170,23 @@
     background-color: white;
 }
 
+.buttonGradient {
+    color: white;
+    text-decoration: none;
+    background: linear-gradient(180deg, #8700A9 0%, #980089 100%);
+    border-radius: 30px;
+    padding: 8px 40px 4px 40px;
+    z-index: 2;
+    font-family: "Saira";
+    font-size: 24px;
+}
+
+.buttonGradient:hover {
+    color: white;
+    scale: 1.1;
+    transition: scale 0.5s;
+}
+
 @media screen and (min-width: 320px) and (max-width: 480px) {
 
     .title {
