--- a/site_signal/src/components/Solutions/solutions.css
+++ b/site_signal/src/components/Solutions/solutions.css
@@ -1,184 +1,106 @@
-@keyframes fadeInAnimation {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+/* Animações */
+
+.textFadeIn {
+    opacity: 1;
+    animation: fade-in 2s;
 }
 
+@keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
+
+/* CSS */
+
+/* HomePage */
 .solutionsContainer {
+    margin-top: -172px;
+    position: relative;
+ }
+
+ /* Service */
+.solutionsAltContainer {
+   margin-top: -240px;
+   position: relative;
+}
+
+/* HomePage */
+.solutionsContentContainer {
+    align-items: center;
+    padding: 0 5%;
+    animation: fade-in 2s;
+}
+
+ /* Service */
+.solutionsContentAltContainer {
     display: flex;
-    background-image: url("../../assets/imgs/solucoesBackground.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center; 
+    align-items: center;
+    padding: 0 5%;
+    animation: fade-in 2s;
+}
+
+/* HomePage */
+.solutionsButtonsContainer{
+    display: flex;
     justify-content: center;
-    flex-direction: column;
-    width: 100%;
-    margin-top: -20%;
-    padding-top: 244px;
-    padding-left: 72px;
-    padding-right: 72px;
 }
 
-.solutionsContainerButtons{
-    display: flex;
-    justify-content : space-evenly;
-}
-
-#solutionsButtonClicked {
-    width: 267.56px;
-    height: 88px;
-    font-family: "Saira";
-    font-size: 25px;
-    color: white;
-    border-radius: 50px;
-    border: white 3px solid;
-    margin: 10px 10px;
-}
-
-.solutionsChangeContent{
-    display: flex;
-    margin-top: 40px;
-}
-
-.solutionsChangeContent img{
-    width: 500px;
-    height: 500px;
-    margin-left: 3%;
-}
-
-.solutionsContainerText{
-    text-align: right;
-    margin-right: 3%;
+/* Service */
+.solutionsButtonsAltContainer{
     display: flex;
     flex-direction: column;
-    align-items: end;
+    margin-right: 10%;
 }
 
-.solutionsTitle{
+/* Common */
+.solutionsTextContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.solutionsTextContainer h1{
     width: fit-content;
-    border-bottom: #610C7D 8px solid;
-    margin-bottom: 20px;
-}
-
-.solutionsTitle h1{
     font-family: "Scada";
     font-weight: bolder;
     color: #610C7D;
+    border-bottom: 10px solid #610C7D;
+    margin-bottom: 24px;
 }
 
-.solutionsContainerText p{
-    width: 80%;
+.solutionsTextContainer p{
     color: #707070;
-    font-family: "Scada";
-    font-size: 25px;
+    font-family: "Saira";
+    font-size: 24px;
     text-align: right;
-    margin-bottom: 20px;
 }
 
-.solutionsContainerMobile{
-    display: none;
+/* HomePage */
+.solutionImage {
+    width: 440px;
 }
 
-/* Responsividade */
-
-/* 320px — 480px: Mobile devices
-481px — 768px: iPads, Tablets
-769px — 1024px: Small screens, laptops
-1025px — 1200px: Desktops, large screens
-1201px and more —  Extra large screens, TV */
-
-
-/** Mobile e Tablets **/
-@media screen and (min-width: 320px) and (max-width: 768px) {
-
-    .solutionsContainer{
-        margin-top: 30px;
-        padding: 15px;
-        background: none;
-    }  
-
-    .solutionsContainer h2{
-        margin-top: -40px;
-    }
-
-    .solutionsContainerButtons{
-        display: none;
-    }
-    .solutionsChangeContent{
-        display: none;
-    }
-    .solutionsContainerMobile{
-        display: flex;
-        flex-direction: column;
-    }
-    .solutionsCardMobile {
-        box-shadow: 0px 0px 12px 2px rgba(0,0,0,0.4);
-        border-radius: 30px;
-        text-align: left;
-        margin-bottom: 40px;
-        padding: 20px;
-        font-family: "Scada";
-        color: #707070;
-        margin-right: 16px;
-        margin-left: 16px;
-    }
-
-    .solutionsCardMobile h1 {
-        font-weight: bolder;
-    }
-
-    .solutionsCardMobile img{
-        width: 12% ;
-    }
-
-    .solutionsCardMobile img:last-of-type{
-        width: 50%;
-        position: absolute;
-        margin-left: 20%;
-        z-index: -1;
-        opacity: 0.2;
-    }
-    .solutionsTitleMobile {
-        width: fit-content;
-        color: #610C7D;
-        border-bottom: #610C7D 7px solid;
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
-    .solutionsCardMobile p{
-        font-size: 18px;
-    }
+/* HomePage */
+.solutionsBackground {
+    position: absolute;
+    width: 100%;
+    z-index: -1;
+    top: -25%;
+    left: 50%;
+    margin-left: -40%;
 }
 
-/** Mobile: Correção de tamanho de imagens **/
-@media screen and (min-width: 620px) and (max-width: 768px) {
-    .solutionsCardMobile img:last-of-type{
-        width: 40%;
-        margin-left: 35%;
-    }
-}
-
-/** Laptops **/
-@media screen and (min-width: 769px) and (max-width: 1600px) {
-    .solutionsContainer{
-        padding-left: 0px;
-        padding-right: 0px;
-        margin-bottom: 48px;
-    }
-
-    .solutionsContainer h2 {
-        margin-top: -80px;
-    }
-
-    #solutionsButtonClicked {
-        font-size: 22px;
-    }
-
-    .solutionsChangeContent img{
-        width: 400px;
-        height: 400px;
-    }
+/* Service */
+.solutionBackground {
+    position: absolute;
+    z-index: -1;
+    opacity: 0.2;
+    top: 2%;
+    left: 60%;
+    width: 720px;
 }
