--- a/site_signal/src/components/Solutions/solutions.css
+++ b/site_signal/src/components/Solutions/solutions.css
@@ -104,3 +104,38 @@
     left: 60%;
     width: 720px;
 }
+
+.solutionsCardContainer {
+    display: none;
+}
+
+/** Responsividade **/
+
+/* Mobile */
+@media screen and (min-width: 320px) and (max-width: 480px) {
+
+    .solutionsContainer {
+        margin-top: -24px;
+        position: relative;
+     }
+
+     .solutionsBackground {
+        width: 200%;
+        left: 0;
+        top: 0;
+        margin-left: 0;
+     }
+
+    .solutionsContentContainer {
+        display: none;
+    }
+
+    .solutionsCardContainer {
+        display: block;
+    }
+
+    .solutionBackground {
+        top: 20%;
+        left: 20%;
+    }
+}
