--- a/site_signal/src/components/ServiceInfoPage/serviceInfo.css
+++ b/site_signal/src/components/ServiceInfoPage/serviceInfo.css
@@ -43,6 +43,33 @@
 }
 .serviceCardAvatar img{
     border-radius: 50%;
-    width: 200px;
-    
+    width: 200px;    
+}
+
+/* Galeria */
+
+.serviceInfoThumb {
+    width: 900px;
+    height: 500px;
+    display: flex;
+    justify-content: center;
+}
+
+.serviceInfoThumb img{
+    width: 100%;
+    box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.7), 0px 20px 30px rgba(0, 0, 0, 0.3), 0px 10px 50px rgba(0, 0, 0, 0.2);
+    border-radius: 30px;
+    background: #FFFFFF;
+}
+
+.serviceInfoImagesOptions{
+    display: flex;
+    margin-top: 40px;
+    margin-bottom: 120px;
+}
+
+.serviceInfoImagesOptions img{
+    margin-right: 40px;
+    border-radius: 30px;
+
 }
