--- a/site_signal/src/components/ServiceInfoPage/serviceInfo.css
+++ b/site_signal/src/components/ServiceInfoPage/serviceInfo.css
@@ -73,3 +73,85 @@
     border-radius: 30px;
 
 }
+.serviceInfoImagesContainer {
+    position: "relative"
+}
+
+/* Responsividade */
+
+/* 320px — 480px: Mobile devices
+481px — 768px: iPads, Tablets
+769px — 1024px: Small screens, laptops
+1025px — 1200px: Desktops, large screens
+1201px and more —  Extra large screens, TV */
+
+
+
+/* @media screen and (min-width: 320px) and (max-width: 768px){
+    
+} */
+@media screen and (min-width: 320px) and (max-width: 480px) {
+    .serviceInfoContainer{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        gap: 50px;
+    }
+    .serviceInfoText h2 {
+        font-family: 'saira';
+        color: #9C9C9C;
+        font-size: 28px;
+    }
+    .serviceInfoText p {
+        font-family: 'scada';
+        margin-bottom: 42px;
+        padding-right: 20px;
+        color: #707070;
+        font-size: 20px;
+        width: 100vw;
+
+    }
+    #serviceButtonPurple2 {
+        font-size: 15px;
+        padding: 10px 20px 10px 20px;
+    }
+    .serviceInfoCard {
+        display: flex;
+        align-items: start;
+        gap: 10px;
+       border-radius: 10px;
+        padding: 10px;
+        box-shadow: 0px 2px 6px 0px #00000040;
+
+    }
+    .serviceInfoCard h2 {
+        font-family: 'scada';
+        font-size: 28px;
+        color: #424242;
+        margin-bottom: 0px;
+        padding-top: 12px;
+        width: 0px;
+    }
+    .serviceInfoCard p {
+        font-family: 'scada';
+        font-size: 13px;
+        color: #707070;
+        margin-top: 30px;
+        margin-left: -88px ;
+    }
+    .serviceInfoCard h3{
+        font-family: 'scada';
+        font-size: 1.1rem;
+        color: #424242;
+        
+    }
+    .serviceCardAvatar img{
+        border-radius: 50%;
+        width: 78px;    
+        
+    }
+    .serviceInfoImagesContainer {
+        display: none;
+    }
+    
+}
