--- a/site_signal/src/components/ServicesPage/ServiceProcesses/processes.css
+++ b/site_signal/src/components/ServicesPage/ServiceProcesses/processes.css
@@ -251,3 +251,14 @@
         font-size: 16px;
     }
 }
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+
+    .timelineContainer {
+        display: none
+    }
+
+    .timelineMobile {
+        display: block;
+    }
+}
