--- a/site_signal/src/components/ServiceInfoPage/serviceInfo.css
+++ b/site_signal/src/components/ServiceInfoPage/serviceInfo.css
@@ -25,6 +25,7 @@
     align-items: center;
     gap: 30px;
     padding-right: 20px;
+    
 }
 .serviceInfoCard h2 {
     font-family: 'scada';
@@ -64,7 +65,7 @@
 
 .serviceInfoImagesOptions{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .serviceInfoImagesOptions img{
@@ -100,6 +101,12 @@
         flex-direction: column;
         width: 100%;
         gap: 50px;
+        padding: 0%;
+        margin-bottom: -130px;
+    }
+
+    .serviceInfoText{
+        padding: 5%;
     }
     .serviceInfoText h2 {
         font-family: 'saira';
@@ -112,7 +119,7 @@
         padding-right: 20px;
         color: #707070;
         font-size: 20px;
-        width: 100vw;
+        
 
     }
     #serviceButtonPurple2 {
@@ -129,7 +136,8 @@
         border-radius: 10px;
         padding: 10px;
         box-shadow: 0px 2px 6px 0px #00000040;
-
+        margin: 5%;
+       
     }
     .serviceInfoCard h2 {
         font-family: 'scada';
@@ -179,6 +187,7 @@
         margin-top: 25px;
         margin-bottom: 20px;
         width: 100%;
+        
     }
 
     .serviceInfoImages{
@@ -214,7 +223,6 @@
     .serviceInfoImagesOptions img{
         width: 170px;
         height: 120px;
-        margin-left: 8px;
     }
 }
 
