--- a/site_signal/src/components/ServiceInfoPage/serviceInfo.css
+++ b/site_signal/src/components/ServiceInfoPage/serviceInfo.css
@@ -33,7 +33,6 @@
     align-items: center;
     gap: 30px;
     padding-right: 20px;
-    
 }
 .serviceInfoCard h2 {
     font-family: 'scada';
@@ -73,6 +72,7 @@
 .serviceInfoImagesOptions{
     display: flex;
     justify-content: space-around;
+    margin-bottom: 8%;
 }
 
 .serviceInfoImagesOptions img{
@@ -149,7 +149,6 @@
         padding: 10px;
         box-shadow: 0px 2px 6px 0px #00000040;
         margin: 5%;
-       
     }
     .serviceInfoCard h2 {
         font-family: 'scada';
@@ -306,12 +305,12 @@
 }
 
 
-@media screen and (min-width: 769px) and (max-width: 1200px) {
+@media screen and (min-width: 769px) and (max-width: 999px) {
     .serviceCardAvatar img {
         border-radius: 50%;
         width: 150px;
     }
-
+    
     .serviceInfoCard {
         display: flex;
         gap: 30px;
@@ -319,18 +318,59 @@
         text-align: center;
         padding-right: 0px;
       }
+}
 
+@media screen and (min-width: 1000px) and (max-width: 1200px) {
+    .serviceCardAvatar img {
+        border-radius: 50%;
+        width: 150px;
+    }
+    
+    /* .serviceInfoCard p{
+        font-size: 20px;
+    } */
+
+    .serviceInfoCard {
+        display: flex;
+        gap: 30px;
+        text-align: left;
+        padding-right: 0px;
+      }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1499px) {
     .serviceInfoThumb img{
-        height: 190px;
+        width: 100%;
     }
 
     .serviceInfoImagesOptions img{
         border-radius: 8px;
-        width: 140px;
-        height: 90px;
+        width: 190px;
+        height: 120px;
     }
 
     .serviceInfoImagesOptions{
         margin-top: 20px;
+    }
+}
+
+@media screen and (min-width: 1500px){
+
+    .serviceInfoThumb img{
+        width: 100%;
+    }
+
+    .serviceInfoImagesOptions img{
+        border-radius: 8px;
+        width: 280px;
+        height: 180px;
+    }
+    
+    .serviceInfoImagesOptions{
+        margin-top: 20px;
+    }
+
+    .serviceCardAvatar{
+        margin-top: 30px;
     }
 }
