--- a/site_signal/src/assets/styles/global.css
+++ b/site_signal/src/assets/styles/global.css
@@ -10,6 +10,26 @@
     overflow-x: hidden;
 }
 
+/* Animações */
+
+@keyframes fade-in {
+    from {
+      opacity: 0;
+    }
+
+    to {
+      opacity: 1;
+    }
+}
+
+.textFadeIn {
+    opacity: 1;
+    animation: fade-in 2s;
+}
+
+/* ---------------------------------------*/
+/* Estilização de textos (conteúdo) */
+
 .title {
     font-family:"Scada";
     font-size: 48px;
@@ -26,36 +46,10 @@
     padding: 0 5% 0 5%;
 }
 
-@media screen and (min-width: 320px) and (max-width: 480px) {
-
-    .title {
-        font-size: 28px;
-    }
-
-    .subtitle {
-        font-size: 20px;
-    }
-
-}
-
-@media screen and (min-width: 481px) and (max-width: 768px) {
-    .title {
-        font-size: 36px;
-    }
-
-    .subtitle {
-        font-size: 24px;
-    }
-}
-
-@media screen and (min-width: 769px) and (max-width: 1200px) {
-    .title {
-        font-size: 40px;
-    }
-
-    .subtitle {
-        font-size: 26px;
-    }
+.content {
+    color: #707070;
+    font-family: "Saira";
+    font-size: 24px;
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
@@ -68,6 +62,10 @@
         font-size: 20px;
     }
 
+    .content {
+        font-size: 16px;
+    }
+
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
@@ -78,18 +76,41 @@
     .subtitle {
         font-size: 24px;
     }
+
+    .content {
+        font-size: 18px;
+    }
 }
 
-@media screen and (min-width: 769px) and (max-width: 1200px) {
+@media screen and (min-width: 769px) and (max-width: 1024px) {
     .title {
         font-size: 40px;
     }
 
     .subtitle {
-        font-size: 26px;
+        font-size: 28px;
+    }
+
+    .content {
+        font-size: 20px;
     }
 }
 
+@media screen and (min-width: 1025px) and (max-width: 1366px) {
+    .title {
+        font-size: 40px;
+    }
+
+    .subtitle {
+        font-size: 28px;
+    }
+
+    .content {
+        font-size: 20px;
+    }
+}
+
+/* ---------------------------------------*/
 /* Estilização do container de particulas */
 .tsparticles {
     width: 100%;
@@ -107,17 +128,17 @@
     border-radius: 100% !important;
 }
 
+/* ---------------------------------------*/
 /* Botoes */
-
 .buttonPurple {
     text-decoration: none;
     background-color: white;
     border: 2px solid #8700A9;
     border-radius: 30px;
-    padding: 8px 40px 4px 40px;
+    padding: 16px;
     z-index: 2;
     font-family: "Saira";
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .buttonPurple:hover {
@@ -131,10 +152,10 @@
     text-decoration: none;
     border: 2px solid #8700A9;
     border-radius: 30px;
-    padding: 8px 40px 8px 40px;
+    padding: 16px;
     z-index: 2;
     font-family: "Saira";
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .buttonPurple2:hover {
@@ -178,7 +199,7 @@
     padding: 8px 40px 4px 40px;
     z-index: 2;
     font-family: "Saira";
-    font-size: 24px;
+    font-size: 20px;
 }
 
 .buttonGradient:hover {
