Refatorando o css da parte das soluções

--- a/site_signal/src/components/HomePage/Solutions/solutions.css
+++ b/site_signal/src/components/HomePage/Solutions/solutions.css
@@ -83,6 +83,10 @@
     display: none;
 }
 
+.flexDirection{
+    flex-direction: column;
+}
+
 /* Responsividade */
 
 /* 320px — 480px: Mobile devices
