--- a/site_signal/src/components/HomePage/Solutions/solutions.css
+++ b/site_signal/src/components/HomePage/Solutions/solutions.css
@@ -17,14 +17,20 @@
     flex-direction: column;
     width: 100%;
     margin-top: -20%;
+    margin-bottom: 48px;
     padding-top: 244px;
     padding-left: 72px;
     padding-right: 72px;
 }
 
+.solutionsContainer .flex {
+    display: flex;
+}
+
 .solutionsContainerButtons{
     display: flex;
     justify-content : space-evenly;
+    gap: 1.5rem;
 }
 
 #solutionsButtonClicked {
@@ -57,6 +63,10 @@
     flex-direction: column;
     align-items: end;
 }
+.solutionsContainerText.services {
+    text-align: justify;
+    align-items: center;
+}
 
 .solutionsTitle{
     width: fit-content;
@@ -78,12 +88,15 @@
     text-align: right;
     margin-bottom: 20px;
 }
+.solutionsContainerText.services p {
+    text-align: justify;
+}
 
 .solutionsContainerMobile{
     display: none;
 }
 
-.flexDirection{
+.flexColumn {
     flex-direction: column;
 }
 
@@ -171,7 +184,6 @@
     .solutionsContainer{
         padding-left: 0px;
         padding-right: 0px;
-        margin-bottom: 48px;
     }
 
     .solutionsContainer h2 {
