--- a/site_signal/src/components/ServicesPage/Portfolio/portfolio.css
+++ b/site_signal/src/components/ServicesPage/Portfolio/portfolio.css
@@ -60,6 +60,10 @@
     display: none;
 }
 
+.porfolioCarouselItem a {
+    text-decoration: none;
+}
+
 /** Mobile e Tablets **/
 
 @media screen and (min-width: 320px) and (max-width: 340px) {
